Fix deselection bug, add logo

--- a/set.html
+++ b/set.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8"/>
   <style>
   .footer {
+    clear:both;
+    text-align:center;
     font-size: 80%;
   }
   #svgBoard { 
@@ -15,6 +17,9 @@
   #elSet {
     display:none;
     position:absolute;
+    width:400px;height:400px;
+    text-align:center;
+    vertical-align:middle;
     left:200px;top:200px;
     font-size:72pt;
     font-weight:bold;
@@ -281,5 +286,5 @@ shuffle();
 </script>
 <button id="elDeal" onclick="return deal();">Deal</button>
 
-<div class="footer">Funtimes by Tim Brown</div>
+<div class="footer"><img src="valutica_clear.png" width="100px"></div>
 </html>
