--- a/set.html
+++ b/set.html
@@ -19,7 +19,7 @@
     position:absolute;
     width:400px;height:400px;
     text-align:center;
-    vertical-align:middle;
+    padding-top:200px;
     font-size:72pt;
     font-weight:bold;
     text-shadow:0px 0px 10px #fff;
