--- a/set.html
+++ b/set.html
@@ -282,7 +282,16 @@ function deal()
 }
 
 shuffle();
+
+// Googly charts
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-43628938-1', 'valutica.co.uk');
+  ga('send', 'pageview');
 </script>
+
 <button id="elDeal" onclick="return deal();">Deal</button>
 
 <div class="footer"><img src="valutica_clear.png" width="100px"></div>
