count possible sets

--- a/set.html
+++ b/set.html
@@ -9,7 +9,7 @@
 
 <body>
 <div id="wrap">
-  <div class="navbar navbar-fixed-top">
+  <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner"> 
       <div class="container"> 
         <a class="brand" href="#">Set</a>
@@ -64,6 +64,7 @@
     <p><span id="elInstructions">Deal, then select 3 cards - go!</span></p>
 
     <p><span id="elNSets"></span></p>
+    <p><span id="elPossibleSets"></span></p>
 
     <button class="btn btn-large btn-primary" id="elDeal" onclick="return deal();">Deal</button>
 
