Added variables, crude formatting

--- a/set.html
+++ b/set.html
@@ -63,10 +63,11 @@
 
     <p><span id="elInstructions">Deal, then select 3 cards - go!</span></p>
 
-    <p><span id="elNSets"></span></p>
-    <p><span id="elPossibleSets"></span></p>
+    <p><span id="elPossibleSets"><br><br><br></span></p>
 
-    <button class="btn btn-large btn-primary" id="elDeal" onclick="return deal();">Deal</button>
+    <p><span id="elNSets"><br></span></p>
+
+    <button class="btn btn-large btn-primary" id="elDeal" onclick="return deal();" autofocus>Deal</button>
 
     <!-- Affiliate link -->
     <div style="margin-top:140px">
