--- a/set.html
+++ b/set.html
@@ -68,10 +68,13 @@
 
     <p><span id="elNSets"><br></span></p>
 
-    <button class="btn btn-large btn-primary" id="elDeal" onclick="return deal();" autofocus>Deal</button>
+    <p><span id="timer" style="background:green"><br></span></p>
+    <p><span id="points"><br></span></p>
+
+    <p><button class="btn btn-large btn-primary" id="elDeal" onclick="return deal();" autofocus>Deal</button></p>
 
     <!-- Affiliate link -->
-    <div style="margin-top:140px">
+    <div style="margin-top:90px">
     <p><a href="http://www.amazon.co.uk/gp/product/B00000IV34/ref=as_li_tf_tl?ie=UTF8&camp=1634&creative=6738&creativeASIN=B00000IV34&linkCode=as2&tag=valutica-21">
         <img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B00000IV34&Format=_SL110_&ID=AsinImage&MarketPlace=GB&ServiceVersion=20070822&WS=1&tag=valutica-21" style="margin-top:-40px; float: left;">Get SET the card game<br>from Amazon</a><img src="//ir-uk.amazon-adsystem.com/e/ir?t=valutica-21&l=as2&o=2&a=B00000IV34" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></p>
     </div>
