More info in modal msg

--- a/set.html
+++ b/set.html
@@ -61,7 +61,10 @@
       </pattern>
     </defs>
     </svg>
-    <div id="elSet">Set!</div>
+    <div id="elSet">
+      <div id="modalTitle"></div>
+      <div id="modalSubTitle"></div>
+    </div>
 
     <div class="alert">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
